# raydium-clmm

./: .ammanrc.js  Anchor.toml  Cargo.toml  client_config.ini
client/: Cargo.toml  client_config.ini
client/src/: main.rs
client/src/instructions/: amm_instructions.rs  events_instructions_parse.rs  token_instructions.rs  utils.rs
not-raydium-perp-pools-client/: Cargo.toml  client_config.ini
not-raydium-perp-pools-client/src/: main.rs
programs/amm/: Cargo.toml
programs/amm/src/: error.rs  lib.rs
programs/amm/src/instructions/: close_position.rs  collect_remaining_rewards.rs  create_pool.rs  decrease_liquidity.rs  increase_liquidity.rs  initialize_reward.rs  open_position.rs  set_reward_params.rs  swap.rs  swap_router_base_in.rs  swap_v2.rs
programs/amm/src/instructions/admin/: collect_fund_fee.rs  collect_protocol_fee.rs  create_amm_config.rs  create_operation_account.rs  transfer_reward_owner.rs  update_amm_config.rs  update_operation_account.rs
programs/amm/src/libraries/: swap_math.rs
programs/amm/src/states/: config.rs  oracle.rs  personal_position.rs  pool.rs  protocol_position.rs  tick_array.rs  tickarray_bitmap_extension.rs
programs/amm/src/util/: token.rs
switchboard_functions/savings_game/src/: main.rs
