[package]
name = "not-raydium-perp-pools-client"
version = "0.1.0"
rust-version = "1.56"
description = "This is a client that allows you to interacc with the devnet demo of staccoverflow's IL- and liquidation-killing perpetual pools Raydium CLMM fork. For fun and profit. https://65ecbd0c38e711dd255ec22c--megayield.netlify.app wat works:connect, concentrated liquidity,create pool,add lp position,close lp position"
edition = "2021"
keywords = ["solana", "anchor", "staccoverflow"]
readme = "https://gist.github.com/staccDOTsol/13f3f2bc9029ab0bc8d8754dc700cd53"

[dependencies]
anchor-client = "0.29.0"
anchor-lang = "0.29.0"
raydium-amm-v3 = {version="0.1.0",path = "../programs/amm", features = ["no-entrypoint", "client"]}
solana-sdk = ">=1.14, <1.17"
solana-client = ">=1.14, <1.17"
solana-account-decoder = ">=1.14, <1.17"
solana-transaction-status = ">=1.14, <1.17"
spl-token = { version = "4.0.0", features=["no-entrypoint"] }
spl-token-client = "0.7.0"
spl-memo = "4.0.0"
spl-associated-token-account = { version = "2.2.0", features = ["no-entrypoint"]}
spl-token-2022 = { version = "0.9.0", features = ["no-entrypoint"]}
mpl-token-metadata = { version = "*", features = ["no-entrypoint"] }
clap = { version = "4.1.8", features = ["derive"] }
anyhow = "1.0.32"
rand = "0.7.3"
hex = "0.4.3"
configparser = "3.0.0"
serde_json = { version = "1.0.78" }
serde = { version = "1.0", features = ["derive"] }
arrayref = "0.3.7"
bs58 = { version = "0.5.0"}
bincode = { version = "1.3.3" }
regex = "1"
colorful = "0.2.2"