[package]
name = "not-raydium-perp-pools-client"
version = "0.1.138"
rust-version = "1.56"
authors = ["stacc <jarettrsdunn+git@gmail.com>"]
description = "This is a client that allows you to interacc with the devnet demo of staccoverflow's IL- and liquidation-killing perpetual pools Raydium CLMM fork. For fun and profit. https://65ecbd0c38e711dd255ec22c--megayield.netlify.app wat works:connect, concentrated liquidity,create pool,add lp position,close lp position. in this here client 'swap v2' is a misnomer ur actually taking out a levered position *yolo* and unswap v2 is closin it. there is no incentive to help out probably yet yanno points"
edition = "2021"
license-file = "../license"
homepage = "https://twitter.com/staccoverflow"
documentation = "https://twitter.com/staccoverflow"
repository = "https://github.com/staccdotsol/raydium-clmm"
keywords = ["solana", "anchor", "staccoverflow"]
readme = "client_config.ini"

[dependencies]
anchor-client = "0.29.0"
anchor-lang = "0.29.0"
raydium-amm-v3 = {version="0.1.0",path = "../programs/amm", features = ["no-entrypoint", "client"]}
solana-sdk = ">=1.14, <1.17"
solana-client = ">=1.14, <1.17"
solana-account-decoder = ">=1.14, <1.17"
solana-transaction-status = ">=1.14, <1.17"
spl-token = { version = "4.0.0", features=["no-entrypoint"] }
spl-token-client = "0.7.0"
spl-memo = "4.0.0"
spl-associated-token-account = { version = "2.2.0", features = ["no-entrypoint"]}
spl-token-2022 = { version = "0.9.0", features = ["no-entrypoint"]}
mpl-token-metadata = { version = "^1", features = ["no-entrypoint"] }
clap = { version = "4.1.8", features = ["derive"] }
anyhow = "1.0.32"
rand = "0.7.3"
hex = "0.4.3"
configparser = "3.0.0"
serde_json = { version = "1.0.78" }
serde = { version = "1.0", features = ["derive"] }
arrayref = "0.3.7"
bs58 = { version = "0.5.0"}
bincode = { version = "1.3.3" }
regex = "1"
colorful = "0.2.2"
